--- a/src/appointment.css
+++ b/src/appointment.css
@@ -2,6 +2,21 @@
     overflow: hidden;
 }
 
+#appt-main h1 {
+    font-family: 'DM Serif Display', serif;
+    font-weight: bold;
+    letter-spacing: 2px;
+    margin-top: 10%;
+}
+
+#appt-main h4 {
+    font-family: 'EB Garamond', serif;
+    color: rgba(84, 84, 84, 0.7); 
+    font-style: oblique; 
+    font-size: 20px;
+    
+}
+
 .booking-img-div {
     max-width: 50%;
     overflow: hidden;
@@ -13,6 +28,6 @@
 
 .appt-form {
     width: 50%;
-    margin-left: 20%; 
-    margin-top: 10%
+    margin: 0 auto;
+    margin-top: 5%
 }
