SERVICE PAGE EDITS

--- a/src/navbar.css
+++ b/src/navbar.css
@@ -2,6 +2,8 @@
     font-family: 'DM Serif Display', serif;
     font-family: 'EB Garamond', serif;
     font-family: 'Parisienne', cursive; 
+    font-family: 'Pacifico', cursive;
+    font-family: 'Merriweather', serif;
 */
 
 .navbar {
