mobile responsive homepage

--- a/src/footer.css
+++ b/src/footer.css
@@ -14,3 +14,18 @@
     margin: 50px; 
     color: var(--ghost-white)
 }
+
+/* media queries */ 
+@media (max-width: 575.98px) {
+    .footer a {
+        font-size: 30px;
+        margin: 30px; 
+    }
+}
+
+ @media (max-width: 375.98px) {
+    .footer a {
+        font-size: 25px;
+        margin: 20px; 
+    }
+ }
