--- a/src/footer.css
+++ b/src/footer.css
@@ -2,7 +2,7 @@
     position: relative;
     bottom: 0;
     width: 100%;
-    background-color: #635394b1;
+    background-color: #121212;
     color: white;
     text-align: center;
     height: 100%; 
