--- a/src/services.css
+++ b/src/services.css
@@ -96,7 +96,7 @@
 }
 
 #hair {
-    margin-top: 10%
+    margin-top: 20%
 }
 
 #hair img {
@@ -150,7 +150,7 @@
 }
 
 #makeup {
-    margin-top: 15%
+    margin-top: 25%
 }
 
 #makeup h1 {
@@ -180,7 +180,7 @@
 }
 
 #group-events {
-    margin-top: 15%; 
+    margin-top: 20%; 
     padding-bottom: 10%;
 }
 
@@ -209,6 +209,10 @@
 }
 
 @media (max-width: 1400px) {
+    #makeup {
+        margin-top: 25%;
+    }
+
     #makeup img {
         max-width: 380px
     }
@@ -220,9 +224,25 @@
     .makeup-p {
         font-size: 18px;
     }
+
+    #hairstyle img {
+        min-width: 70%
+    }
+
+    .hair-srvs-div-2 {
+        width: 65%
+    }
+
+    .hair-srvs-div {
+        width: 30%
+    }
 }
 
 @media (max-width: 1200px) {
+    #makeup {
+        margin-top: 25%;
+    }
+
     #makeup img {
         max-width: 700px; 
         height: 60%
@@ -268,6 +288,10 @@
 }
 
 @media (max-width: 992px) {
+    #makeup {
+        margin-top: 25%;
+    }
+
     .you {
         font-size: 60px;
     }
@@ -292,13 +316,23 @@
         margin-bottom: -200px
     }
 
-    /* #makeup h1 {
-        font-size: 40px;
-    } */
-
     .group-events-p {
         font-size: 20px; 
         width: 95%
+    }
+
+    .hair-srvs-div {
+        width: 40%;
+        /* margin-right: 20px */
+    }
+
+    #hair img {
+        margin-left: 30%;
+        min-width: 60%;
+    }
+
+    .hair-srvs-div-2 {
+        width: 80%;
     }
 }
 
@@ -306,9 +340,32 @@
     #makeup img {
         max-width: 450px; 
     }
+
+    #hair img {
+        margin-left: 20%;
+        min-width: 80%;
+    }
+
+    .hair-srvs-div {
+        width: 45%;
+    }
+
+    .hair-srvs-div-2 {
+        width: 100%;
+        padding-left: 10%; 
+        /* margin: 0 auto */
+    }
+
+    #hairstyle img {
+        min-width: 90%;
+    }
 }
 
 @media (max-width: 768px) {
+    #makeup {
+        margin-top: 25%;
+    }
+
     #makeup img {
         max-width: 300px; 
         height: 80%; 
@@ -339,9 +396,38 @@
         padding-left: 60px; 
         padding-right: 60px
     }
+
+    #hair img {
+        margin-left: 0%;
+        min-width: 60%;
+    }
+
+    #hair-dresser {
+        text-align: center;
+    }
+
+    .hair-srvs-div {
+        width: 80%;
+        margin: 0 auto; 
+        margin-top: 10%
+    }
+
+    #hairstyle img {
+        min-width: 60%;
+    }
+
+    #blonde-hair-pic {
+        text-align: center;
+        margin-top: 10%
+    }
+    
 }
 
 @media (max-width: 576px) {
+    #makeup {
+        margin-top: 25%;
+    }
+
     #makeup img {
         max-width: 250px; 
         height: 80%; 
@@ -361,6 +447,10 @@
 }
 
 @media (max-width: 476px) {
+    #makeup {
+        margin-top: 25%;
+    }
+
     #makeup img {
         max-width: 220px; 
         height: 80%; 
@@ -380,6 +470,15 @@
         max-width: 200px; 
         height: 80%; 
     }
+
+    #hair img {
+        margin-left: 0%;
+        min-width: 80%;
+    }
+    
+    #hairstyle img {
+        min-width: 80%;
+    }    
 }
 
 
