--- a/src/appointment.css
+++ b/src/appointment.css
@@ -88,7 +88,8 @@
         padding-left: 50px; 
         padding-right: 50px; 
         padding-top: 20px; 
-        padding-bottom: 20px
+        padding-bottom: 20px; 
+        width: 70%
     }
 
     #appt-main label {
