--- a/src/services.css
+++ b/src/services.css
@@ -580,7 +580,7 @@
     /* makeup services section */
     #makeup img {
         max-width: 60%;
-        height: 50%;
+        height: auto;
     }
 
     .sm-makeup-img1 {
